[package]
name = "my_microservice"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A modular microservice with async scaling"
repository = "https://github.com/yourusername/my_microservice"

[dependencies]
actix-web = "4.2"
actix-service = "2.0.2"
serde = { version = "1.0.217", features = ["derive"] }
uuid = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
nats = "0.25.0"
tokio-tls = { version = "0.3.1", features = ["server"] }
openssl = { version = "0.10.69", features = ["v111"] }
#boringssl = { version = "", features = ["v111"]}
websocket = { version = "0.27.1", default-features = false, features = ["openssl"] }

